--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="./js/script.js"></script>
 
     <!-- Header -->
-    <h1>Converting Between Fahrenheit and Celsius</h1>
+    <h1>Converting Fahrenheit to Celsius</h1>
     
     <!-- Text -->
     <p>This web page converts a temperature from Fahrenheit to Celcius.</p>
@@ -40,9 +40,9 @@
 
     <!-- Form for user input -->
     <h3>Your Input:</h3>
-      <form action="javascript:temperatureEntered()">
+      <form action="javascript:temperatureCalculate()">
         <label for="fahrenheit">Temperature in Fahrenheit</label>
-        <input type="number" step="0.01" id="temp" placeholder="Degrees Fahrenheit..."><br><br>
+        <input type="number" step="0.01" id="fahrenheit" placeholder="Degrees Fahrenheit..."><br><br>
         <input type="submit" value="Convert" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
       </form>
     
