Fixed celsius spelling error

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1>Converting Fahrenheit to Celsius</h1>
     
     <!-- Text -->
-    <p>This web page converts a temperature from Fahrenheit to Celcius.</p>
+    <p>This web page converts a temperature from Fahrenheit to Celsius.</p>
 
     <!-- Image -->
     <center>
